fix to spacing on work

--- a/scss/_pages/about.scss
+++ b/scss/_pages/about.scss
@@ -4,18 +4,18 @@
 
 .snapshot {
   @include n.grid-12;
-  grid-template-rows: auto auto 1fr;
+  grid-template-rows: auto 1fr;
+  row-gap: 2em;
 
   &__title {
     grid-column: 2 / span 11;
-    grid-row: 2;
+    grid-row: 1;
     font-size: 1.5em;
   }
 
   &__wrapper {
     grid-column: 1 / span 12;
-    grid-row: 3;
-    align-self: center;
+    grid-row: 2;
   }
 
   &__option {
@@ -41,7 +41,7 @@
     &__wrapper {
       &.swiper {
         width: 80%;
-        height: 80%;
+        height: 60%;
       }
     }
 
@@ -57,7 +57,6 @@
 
   //--tablet media query---
   @include queries.large-phone {
-    grid-template-rows: auto auto 1fr 0.25fr;
     &__title {
       font-size: 2.75em;
       align-content: center;
@@ -66,7 +65,7 @@
     &__wrapper {
       &.swiper {
         width: 80%;
-        height: 80%;
+        height: 60%;
       }
     }
 
