--- a/scss/_pages/work.scss
+++ b/scss/_pages/work.scss
@@ -4,17 +4,18 @@
 
 .work {
   @include n.grid-12;
-  grid-template-rows: auto auto 1fr;
+  grid-template-rows: auto 1fr;
+  row-gap: 2em;
 
   &__title {
     grid-column: 2 / span 11;
-    grid-row: 2;
+    grid-row: 1;
     font-size: 1.5em;
   }
 
   &__wrapper {
     grid-column: 1 / span 12;
-    grid-row: 3;
+    grid-row: 2;
     // align-self: center;
   }
 
